--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/ui/theme/css/main.css
@@ -1,8 +1,6 @@
 
 @external gwt*, dialog*, mgwt*, phg*, stm*, ui*;
 
-@url bgr bgrImage;
-
 @eval windowWidth it.mate.therapyreminder.client.ui.theme.CustomTheme.getWindowWidth();
 
 @eval windowHeight it.mate.therapyreminder.client.ui.theme.CustomTheme.getWindowHeight();
@@ -378,6 +376,12 @@ body {
   background: url('main/images/doctors-128.png') no-repeat 4px 2px;
 }
 
+.ui-home-doctors-btn a {
+  font-size: 1.1em;
+  padding-left: 0px;
+  margin-left: -5px;
+}
+
 .ui-home-preferences-btn {
   background: url('main/images/preferences-128.png') no-repeat 4px 2px;
 }
@@ -490,3 +494,76 @@ body {
   border-bottom: 1px solid lightskyblue;
 }
 
+.ui-legal-notes-panel, .ui-legal-notes-panel a {
+  font-size: 0.8em;
+}
+
+.ui-legal-notes-panel h1 {
+  text-align: center;
+  font-size: 1.6em;
+  padding-top: 0.8em;
+  padding-bottom: 0.4em;
+}
+
+.ui-legal-notes-panel p {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+.ui-setting-row {
+  width: 100%;
+  margin-bottom: 0.3em;
+}
+
+.ui-setting-row td:first-child {
+  width: 50%;
+}
+
+.ui-app-online-mode-ckb {
+  width: 1em;
+  height: 1em;
+  margin-left: 0.8em;
+}
+
+.ui-settings-btn.mgwt-SmartButton {
+  font-size: 12px;
+  font-family: arial, sans-serif;
+  font-weight: bold;
+  background-color: #ddd;
+  height: 1em;
+  padding-top: 0.3em;
+  padding-left: 2em;
+  padding-right: 2em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.ui-settings-separator {
+  margin-bottom: 0.5em;
+}
+
+.ui-settings-label {
+  font-size: 12px;
+  padding-left: 0.6em;
+  color: blue;
+  font-weight: bold;
+  margin-bottom: -5px;
+  margin-top: 0.2em;
+}
+
+.ui-contacts-doctor-btn, .ui-contacts-tutor-btn {
+  width: 128px;
+  height: 52px;
+  padding-top: 130px;
+  padding-left: 10px;
+  border: 3px solid rgba(0, 0, 255, 0.1);
+  border-radius: 6px;
+}
+
+.ui-contacts-doctor-btn {
+  background: url('main/images/contacts-doctor-128.png') no-repeat 4px 2px;
+}
+
+.ui-contacts-tutor-btn {
+  background: url('main/images/contacts-tutor-128.png') no-repeat 4px 2px;
+}
