--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/SettingsView.ui.xml
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/SettingsView.ui.xml
@@ -10,28 +10,42 @@
       
     <g:HTML HTML="Settings" addStyleNames="ui-view-header"/>
     
-    <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
-      <p:TouchButton text="Clear DB" ui:field="resetBtn" addStyleNames="ui-top-action-btn"/>
+    <g:HorizontalPanel addStyleNames="ui-setting-row">
+      <g:HTML HTML="Debug" addStyleNames="ui-settings-label ui-app-online-mode-label"/>
+      <p:TouchButton text="Clear DB" ui:field="resetBtn" addStyleNames="ui-settings-btn"/>
     </g:HorizontalPanel>
-
-    <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
-      <p:TouchButton text="Dump DB" ui:field="dumpBtn" addStyleNames="ui-top-action-btn"/>
-    </g:HorizontalPanel>
-
-    <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0">
-      <p:TouchButton text="Start trace" ui:field="traceBtn" addStyleNames="ui-top-action-btn"/>
-    </g:HorizontalPanel>
-
-    <hr class="ui-view-separator-1"/>
     
-    <g:HorizontalPanel>
-      <g:HTML HTML="Online mode:" addStyleNames="ui-field-label ui-app-online-mode-label"/>
-      <ph:PhCheckBox addStyleNames="ui-app-online-mode" ui:field="ckbOnlineMode"/>
+    <g:HorizontalPanel addStyleNames="ui-setting-row">
+      <g:HTML HTML="" addStyleNames="ui-settings-label ui-app-online-mode-label"/>
+      <p:TouchButton text="Dump DB" ui:field="dumpBtn" addStyleNames="ui-settings-btn"/>
+    </g:HorizontalPanel>
+    
+    <g:HorizontalPanel addStyleNames="ui-setting-row">
+      <g:HTML HTML="" addStyleNames="ui-settings-label ui-app-online-mode-label"/>
+      <p:TouchButton text="Start trace" ui:field="traceBtn" addStyleNames="ui-settings-btn"/>
+    </g:HorizontalPanel>
+    
+    <hr class="ui-settings-separator"/>
+    
+    <g:HorizontalPanel addStyleNames="ui-setting-row">
+      <g:HTML HTML="Online mode:" addStyleNames="ui-settings-label ui-app-online-mode-label"/>
+      <ph:PhCheckBox addStyleNames="ui-app-online-mode-ckb" ui:field="ckbOnlineMode"/>
     </g:HorizontalPanel>
         
-    <g:HorizontalPanel addStyleNames="ui-top-button-bar" spacing="0" ui:field="accountPanel" visible="false">
-      <p:TouchButton text="Account" ui:field="accountBtn" addStyleNames="ui-top-action-btn"/>
+    <g:HorizontalPanel addStyleNames="ui-setting-row" spacing="0" ui:field="accountPanel" visible="false">
+      <g:HTML HTML="Account:" addStyleNames="ui-settings-label ui-app-account-label"/>
+      <p:TouchButton text="Edit" ui:field="accountBtn" addStyleNames="ui-settings-btn"/>
     </g:HorizontalPanel>
+    
+    <hr class="ui-settings-separator"/>
+
+    <g:HTMLPanel>
+    
+      <gc:Spacer height="0.5em"/>
+      <p:TouchHTML text="Legal Notes" addStyleNames="ui-settings-label ui-app-legal-notes-label" ui:field="legalNotesBtn"/>
+    
+    </g:HTMLPanel>    
+    
 
   </g:HTMLPanel>
   
