--- a/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditView.ui.xml
+++ b/trunk/therapyreminder/gwt/src/main/java/it/mate/therapyreminder/client/view/ContactEditView.ui.xml
@@ -20,10 +20,10 @@
     <ph:PhTextBox ui:field="nameBox" addStyleNames="ui-app-textbox, ui-name-box"/>
 
     <g:Label text="Email:" addStyleNames="ui-field-label ui-field-label-1"/>
-    <ph:PhTextBox ui:field="emailBox" addStyleNames="ui-app-textbox, ui-email-box"/>
+    <ph:PhTextBox ui:field="emailBox" type="email" addStyleNames="ui-app-textbox, ui-email-box"/>
 
     <g:Label text="Phone number:" addStyleNames="ui-field-label ui-field-label-1"/>
-    <ph:PhTextBox ui:field="phoneBox" addStyleNames="ui-app-textbox, ui-phone-box"/>
+    <ph:PhTextBox ui:field="phoneBox" type="tel" addStyleNames="ui-app-textbox, ui-phone-box"/>
   
   </g:HTMLPanel>
   
